--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,12 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/aos/dist/aos.css",
                             "src/styles.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/aos/dist/aos.css"
+                        ]
                     },
                     "configurations": {
                         "production": {
