Removed unwanted script from angular.json

--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,7 @@
                             "node_modules/aos/dist/aos.css",
                             "src/styles.css"
                         ],
-                        "scripts": [
-                            "node_modules/aos/dist/aos.css"
-                        ]
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
