--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,6 +31,7 @@
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
     "@types/aos": "^3.0.4",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.7",
