--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/aos": "^3.0.4",
     "@types/file-saver": "^2.0.5",
+    "@types/gtag.js": "^0.0.14",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.7",
