Added google analytics on buttons, anchor, etc.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.5",
+    "ngx-google-analytics": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
