--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.5",
     "ngx-google-analytics": "^12.0.0",
+    "particles.js": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
